# SpartyGnomeGame

./: CMakeLists.txt  Doxyfile.doxy  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
Project1Lib/: Astroid.cpp  Astroid.h  AstroidDeclaration.cpp  AstroidDeclaration.h  Background.cpp  Background.h  BackgroundDeclaration.cpp  BackgroundDeclaration.h  CMakeLists.txt  Declaration.cpp  Declaration.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  LevelEndDoor.cpp  LevelEndDoor.h  LevelEndDoorDeclaration.cpp  LevelEndDoorDeclaration.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  MoneyDeclaration.cpp  MoneyDeclaration.h  Platform.cpp  Platform.h  PlatformDeclaration.cpp  PlatformDeclaration.h  PlayingArea.cpp  PlayingArea.h  Scoreboard.cpp  (+29 more)
Tests/: CMakeLists.txt  EmptyTest.cpp  ItemTest.cpp  LevelEndDoorTest.cpp  LevelTest.cpp  WormHoleTest.cpp  gtest_main.cpp
xml/: level0.xml  level2.xml  level3.xml
